# folio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: documentation-maintenance.md  release-preparation.md  tdd-feature-implementation.md
.config/: nextest.toml
.github/workflows/: release.yml  test.yml
crates/folio-cli/: Cargo.toml
crates/folio-cli/src/: main.rs
crates/folio-cli/tests/: ingest_test.rs
crates/folio-core/: Cargo.toml
crates/folio-core/src/: lib.rs  media.rs
crates/folio-ingest/: Cargo.toml
docs/adr/: 0001-metadata-catalog-architecture.md
docs/implementation-plans/: 001-backlog-ingestion-plan.md
docs/templates/: TEMPLATE_ADR.md  TEMPLATE_IMPLEMENTATION_PLAN.md  TEMPLATE_USER_STORIES.md
docs/testing/: test-data-strategy.md
docs/user-stories/: 001-backlog-ingestion.md
scripts/: setup-test-fixtures.sh
test-data/fixtures/: minimal2.mov  test.txt
