[workspace]
resolver = "2"

members = [
    "crates/folio-core",
    "crates/folio-cli",
    "crates/folio-ingest",
    # Future crates:
    # "crates/folio-catalog",
    # "crates/folio-processor",
    # "crates/folio-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paul Adamson"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"  # Progress bars

# Filesystem and paths
walkdir = "2.5"
camino = "1.1"  # UTF-8 paths

# Image processing and metadata
image = "0.25"
kamadak-exif = "0.5"  # EXIF reading

# Hashing (for deduplication)
blake3 = "1.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
proptest = "1.5"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
