[[bin]]
name = "folio"
path = "src/main.rs"

[package]
name = "folio-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Internal dependencies
folio-core = { path = "../folio-core" }
folio-ingest = { path = "../folio-ingest" }

# CLI
clap.workspace = true
indicatif.workspace = true

# Date/time
chrono.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
walkdir.workspace = true
