[package]
name = "folio-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Filesystem
walkdir.workspace = true
camino.workspace = true

# Image and metadata
image.workspace = true
kamadak-exif.workspace = true

# Hashing
blake3.workspace = true

# Date/time
chrono.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
